--- a/schedule/app/index.html
+++ b/schedule/app/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 
     <script src="../node_modules/dhtmlx-gantt/codebase/sources/dhtmlxgantt.js" type="text/javascript" charset="utf-8"></script>
+    <script src="codebase/dhtmlxchart.js" type="text/javascript" charset="utf-8"></script>
     <script src="../node_modules/dhtmlx-gantt/codebase/ext/dhtmlxgantt_marker.js"></script>
 
     <script src="../node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
 
     <link rel="stylesheet" href="../node_modules/dhtmlx-gantt/codebase/dhtmlxgantt.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="codebase/dhtmlxchart.css" type="text/css" charset="utf-8">
 
     <link rel="stylesheet" href="dashboard.css">
 
@@ -22,7 +24,7 @@
 
     <title>Cimplo - Scheduler</title>
   </head>
-  <body>
+  <body onload="init();">
     <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <a class="navbar-brand" href="#"><i class="far fa-calendar-alt"></i> Schedule</a>
@@ -32,8 +34,12 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
+
           <li class="nav-item active">
-            <a class="nav-link" href="javascript:void(null);" onclick="dayview();">Day view <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="javascript:void(null);" onclick="optimizeView();">Optimization <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="javascript:void(null);" onclick="dayview();">Day view</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="javascript:void(null);"" onclick="weekview();">Week view</a>
@@ -60,22 +66,12 @@
     
       <main role="main" class="col-sm-12 ml-sm-auto col-md-12 pt-3">
         <h1>Overview</h1>
-        <div id="gantt_here" style='width:100%; height:800px'></div>
-        <script type="text/javascript">
-            gantt.config.readonly = true;
-            gantt.config.xml_date = "%Y-%m-%d %H:%i:%s";
+        <div id="gantt_here" style='width:100%; height:800px; display:none;'></div>
 
-            var markerId = gantt.addMarker({
-                start_date: new Date(), //a Date object that sets the marker's date
-                css: "today", //a CSS class applied to the marker
-                text: "Now", //the marker title
-                title:  "Today"
-            });
-
-            gantt.init("gantt_here");
-            gantt.load("data.json");
-        </script>
-
+        <div id="optimizationView">
+          <div id="scatter_here" style="width:100%; height:400px; "></div>
+          <button id="runbutton" onclick="javascript:executeProcess();" class="btn btn-primary">(Re)start optimization</button>
+        </div>
      </main>
       
     </div>
