--- a/schedule/app/index.html
+++ b/schedule/app/index.html
@@ -37,7 +37,7 @@
 
           
           <li class="nav-item analysis-menu">
-            <a class="nav-link" href="javascript:void(null);" onclick="analyseview();">Data analysis</a>
+            <a class="nav-link" href="javascript:void(null);" onclick="analyseView();">Data analysis</a>
           </li>
           <li class="nav-item active optimization-menu">
             <a class="nav-link" href="javascript:void(null);" onclick="optimizeView();">Optimization <span class="sr-only">(current)</span></a>
