--- a/schedule/app/index.html
+++ b/schedule/app/index.html
@@ -68,17 +68,17 @@
   <div class="container-fluid hidden">
     <div class="row">
     
-      <main role="main" class="col-sm-12 ml-sm-auto col-md-12 pt-3">
+      <main role="main" class="col-sm-12 ml-sm-auto col-md-12 pt-3" style="margin-top:50px!important;">
         <br/>
 
-        <center><h3 class="loader" style="display:none; margin-top:30px;">Loading data..</h3><div class="loader" id="loader" style="display:none;"></div></center>
-        <div class="visualisation" style="display:none; margin-top:30px;">
+        <center><h3 class="loader" style="display:none;">Loading data..</h3><div class="loader" id="loader" style="display:none;"></div></center>
+        <div class="visualisation" style="display:none;">
           <div class="iframe-container">
             <iframe src="" id="iframe">Loading..</iframe>
           </div>
         </div>
 
-        <div id="gantt_options" class="gantt" style="display:none; margin-top:30px;">
+        <div id="gantt_options" class="gantt" style="display:none;">
             <a href="javascript:void(null);" onclick="dayview();">Day</a> - 
             <a href="javascript:void(null);" onclick="weekview();">Week</a> -
             <a href="javascript:void(null);" onclick="monthview();">Month</a> - 
