Moved the modeling to the app and integrated the progressbar of the modeling process

--- a/schedule/app/index.html
+++ b/schedule/app/index.html
@@ -41,6 +41,9 @@
           <li class="nav-item analysis-menu" id="nav-item1">
             <a class="nav-link" href="javascript:void(null);" onclick="analyseView();">Data analysis</a>
           </li>
+          <li class="nav-item modeling-menu" id="nav-model">
+            <a class="nav-link" href="javascript:void(null);" onclick="modelView();">Modeling</a>
+          </li>
           <li class="nav-item optimization-menu" id="nav-item2">
             <a class="nav-link" href="javascript:void(null);" onclick="optimizeView();">Optimization <span class="sr-only">(current)</span></a>
           </li>
@@ -68,12 +71,15 @@
   </header>
 
   <div class="container-fluid hidden">
-    <div class="row">
-    
       <main role="main" class="col-sm-12 ml-sm-auto col-md-12 pt-3" style="margin-top:50px!important;">
         <br/>
 
         <center><h3 class="loader" style="display:none;">Loading data..</h3><div class="loader" id="loader" style="display:none;"></div></center>
+
+        <div class="modeling" style="display:none;height:100%;">
+          <button id="trainbutton" onclick="javascript:trainModel();" class="btn btn-primary">(Re)train model</button>
+        </div>
+
         <div class="visualisation" style="display:none;">
           <div class="iframe-container">
             <iframe src="" id="iframe">Loading..</iframe>
@@ -99,7 +105,11 @@
           </div>
         </div>
      </main>
-      
+  </div>
+  <div id="statusfooter" style="position:absolute; bottom:10px; width:80%; margin-left:10%; margin-right:10%; text-align:center;">
+    <label id="modeling_log"></label>
+    <div class="progress" style="border:1px solid #666;">
+      <div class="progress-bar progress-bar-striped progress-bar-animated" id="progressbar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
     </div>
   </div>
   </body>
