--- a/schedule/app/index.html
+++ b/schedule/app/index.html
@@ -77,7 +77,36 @@
         <center><h3 class="loader" style="display:none;">Loading data..</h3><div class="loader" id="loader" style="display:none;"></div></center>
 
         <div class="modeling" style="display:none;height:100%;">
-          <button id="trainbutton" onclick="javascript:trainModel();" class="btn btn-primary">(Re)train model</button>
+          <div class="row">
+            <div class="col-sm">
+              <form>
+                <div class="form-group">
+                  <label for="workshops">Number of Workshops</label>
+                  <input type="number" class="form-control" id="workshops" placeholder="3">
+                </div>
+                <div class="form-group">
+                  <label for="components">Number of Components</label>
+                  <input type="number" class="form-control" id="components" placeholder="1">
+                </div>
+                <div class="form-group">
+                  <label for="lookback">Lookback value</label>
+                  <input type="number" class="form-control" id="lookback" placeholder="25">
+                </div>
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox"> Use preprocessing
+                  </label>
+                </div>
+              </form>
+              <button id="trainbutton" onclick="javascript:trainModel();" class="btn btn-primary">(Re)train model</button>
+            </div>
+            <div class="col-sm">
+              <p>Visualize distributions from the current model</p>
+              <select class="selectpicker" id="selectplot"></select>
+              <br/>
+              <img id="plot" src=""?>
+            </div>
+          </div>
         </div>
 
         <div class="visualisation" style="display:none;">
@@ -106,7 +135,7 @@
         </div>
      </main>
   </div>
-  <div id="statusfooter" style="position:absolute; bottom:10px; width:80%; margin-left:10%; margin-right:10%; text-align:center;">
+  <div id="statusfooter" style="position:absolute; bottom:10px; width:80%; margin-left:10%; margin-right:10%; text-align:center; display:none;">
     <label id="modeling_log"></label>
     <div class="progress" style="border:1px solid #666;">
       <div class="progress-bar progress-bar-striped progress-bar-animated" id="progressbar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
